pegjs-generated.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = /^[\n]/,
        peg$c1 = { type: "class", value: "[\\n]", description: "[\\n]" },
        peg$c2 = function(amount, container, unit, preposition, ingredient) {
            var result = {
              amount: amount,
              container: container,
              ingredient: ingredient,
              unit: unit,
            };

            for(var i in result) {
              if(result[i] === null || result[i] === undefined) {
                delete result[i];
              }
            }

            return result;
          },
        peg$c3 = function(amount, unit) {
            return { amount: amount, unit: unit };
          },
        peg$c4 = "(",
        peg$c5 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c6 = "{",
        peg$c7 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c8 = "[",
        peg$c9 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c10 = "<",
        peg$c11 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c12 = ")",
        peg$c13 = { type: "literal", value: ")", description: "\")\"" },
        peg$c14 = "}",
        peg$c15 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c16 = "]",
        peg$c17 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c18 = ">",
        peg$c19 = { type: "literal", value: ">", description: "\">\"" },
        peg$c20 = " ",
        peg$c21 = { type: "literal", value: " ", description: "\" \"" },
        peg$c22 = /^[\t]/,
        peg$c23 = { type: "class", value: "[\\t]", description: "[\\t]" },
        peg$c24 = "of",
        peg$c25 = { type: "literal", value: "of", description: "\"of\"" },
        peg$c26 = "an",
        peg$c27 = { type: "literal", value: "an", description: "\"an\"" },
        peg$c28 = "a",
        peg$c29 = { type: "literal", value: "a", description: "\"a\"" },
        peg$c30 = { type: "any", description: "any character" },
        peg$c31 = /^[,]/,
        peg$c32 = { type: "class", value: "[,]", description: "[,]" },
        peg$c33 = function(letters) { return letters.join(''); },
        peg$c34 = /^[.]/,
        peg$c35 = { type: "class", value: "[.]", description: "[.]" },
        peg$c36 = "one",
        peg$c37 = { type: "literal", value: "one", description: "\"one\"" },
        peg$c38 = "two",
        peg$c39 = { type: "literal", value: "two", description: "\"two\"" },
        peg$c40 = "three",
        peg$c41 = { type: "literal", value: "three", description: "\"three\"" },
        peg$c42 = "four",
        peg$c43 = { type: "literal", value: "four", description: "\"four\"" },
        peg$c44 = "five",
        peg$c45 = { type: "literal", value: "five", description: "\"five\"" },
        peg$c46 = "six",
        peg$c47 = { type: "literal", value: "six", description: "\"six\"" },
        peg$c48 = "seven",
        peg$c49 = { type: "literal", value: "seven", description: "\"seven\"" },
        peg$c50 = "eight",
        peg$c51 = { type: "literal", value: "eight", description: "\"eight\"" },
        peg$c52 = "nine",
        peg$c53 = { type: "literal", value: "nine", description: "\"nine\"" },
        peg$c54 = "ten",
        peg$c55 = { type: "literal", value: "ten", description: "\"ten\"" },
        peg$c56 = "eleven",
        peg$c57 = { type: "literal", value: "eleven", description: "\"eleven\"" },
        peg$c58 = "twelve",
        peg$c59 = { type: "literal", value: "twelve", description: "\"twelve\"" },
        peg$c60 = "few",
        peg$c61 = { type: "literal", value: "few", description: "\"few\"" },
        peg$c62 = /^[\/]/,
        peg$c63 = { type: "class", value: "[/]", description: "[/]" },
        peg$c64 = /^[0-9]/,
        peg$c65 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c66 = function(digits) { return digits.join(''); },
        peg$c67 = /^[a-zA-Z]/,
        peg$c68 = { type: "class", value: "[a-zA-Z]", description: "[a-zA-Z]" },
        peg$c69 = "cups",
        peg$c70 = { type: "literal", value: "cups", description: "\"cups\"" },
        peg$c71 = "cup",
        peg$c72 = { type: "literal", value: "cup", description: "\"cup\"" },
        peg$c73 = "c.",
        peg$c74 = { type: "literal", value: "c.", description: "\"c.\"" },
        peg$c75 = "c",
        peg$c76 = { type: "literal", value: "c", description: "\"c\"" },
        peg$c77 = "fluid",
        peg$c78 = { type: "literal", value: "fluid", description: "\"fluid\"" },
        peg$c79 = "fl",
        peg$c80 = { type: "literal", value: "fl", description: "\"fl\"" },
        peg$c81 = ".",
        peg$c82 = { type: "literal", value: ".", description: "\".\"" },
        peg$c83 = "gallons",
        peg$c84 = { type: "literal", value: "gallons", description: "\"gallons\"" },
        peg$c85 = "gallon",
        peg$c86 = { type: "literal", value: "gallon", description: "\"gallon\"" },
        peg$c87 = "gal.",
        peg$c88 = { type: "literal", value: "gal.", description: "\"gal.\"" },
        peg$c89 = "gal",
        peg$c90 = { type: "literal", value: "gal", description: "\"gal\"" },
        peg$c91 = "ounces",
        peg$c92 = { type: "literal", value: "ounces", description: "\"ounces\"" },
        peg$c93 = "ounce",
        peg$c94 = { type: "literal", value: "ounce", description: "\"ounce\"" },
        peg$c95 = "oz.",
        peg$c96 = { type: "literal", value: "oz.", description: "\"oz.\"" },
        peg$c97 = "oz",
        peg$c98 = { type: "literal", value: "oz", description: "\"oz\"" },
        peg$c99 = "pints",
        peg$c100 = { type: "literal", value: "pints", description: "\"pints\"" },
        peg$c101 = "pint",
        peg$c102 = { type: "literal", value: "pint", description: "\"pint\"" },
        peg$c103 = "pt.",
        peg$c104 = { type: "literal", value: "pt.", description: "\"pt.\"" },
        peg$c105 = "pt",
        peg$c106 = { type: "literal", value: "pt", description: "\"pt\"" },
        peg$c107 = "pounds",
        peg$c108 = { type: "literal", value: "pounds", description: "\"pounds\"" },
        peg$c109 = "pound",
        peg$c110 = { type: "literal", value: "pound", description: "\"pound\"" },
        peg$c111 = "lbs.",
        peg$c112 = { type: "literal", value: "lbs.", description: "\"lbs.\"" },
        peg$c113 = "lbs",
        peg$c114 = { type: "literal", value: "lbs", description: "\"lbs\"" },
        peg$c115 = "lb.",
        peg$c116 = { type: "literal", value: "lb.", description: "\"lb.\"" },
        peg$c117 = "lb",
        peg$c118 = { type: "literal", value: "lb", description: "\"lb\"" },
        peg$c119 = "quarts",
        peg$c120 = { type: "literal", value: "quarts", description: "\"quarts\"" },
        peg$c121 = "quart",
        peg$c122 = { type: "literal", value: "quart", description: "\"quart\"" },
        peg$c123 = "qts.",
        peg$c124 = { type: "literal", value: "qts.", description: "\"qts.\"" },
        peg$c125 = "qts",
        peg$c126 = { type: "literal", value: "qts", description: "\"qts\"" },
        peg$c127 = "qt.",
        peg$c128 = { type: "literal", value: "qt.", description: "\"qt.\"" },
        peg$c129 = "qt",
        peg$c130 = { type: "literal", value: "qt", description: "\"qt\"" },
        peg$c131 = "tablespoons",
        peg$c132 = { type: "literal", value: "tablespoons", description: "\"tablespoons\"" },
        peg$c133 = "tablespoon",
        peg$c134 = { type: "literal", value: "tablespoon", description: "\"tablespoon\"" },
        peg$c135 = "tbsp.",
        peg$c136 = { type: "literal", value: "tbsp.", description: "\"tbsp.\"" },
        peg$c137 = "tbsp",
        peg$c138 = { type: "literal", value: "tbsp", description: "\"tbsp\"" },
        peg$c139 = "tbs.",
        peg$c140 = { type: "literal", value: "tbs.", description: "\"tbs.\"" },
        peg$c141 = "tbs",
        peg$c142 = { type: "literal", value: "tbs", description: "\"tbs\"" },
        peg$c143 = "T.",
        peg$c144 = { type: "literal", value: "T.", description: "\"T.\"" },
        peg$c145 = "T",
        peg$c146 = { type: "literal", value: "T", description: "\"T\"" },
        peg$c147 = "teaspoons",
        peg$c148 = { type: "literal", value: "teaspoons", description: "\"teaspoons\"" },
        peg$c149 = "teaspoon",
        peg$c150 = { type: "literal", value: "teaspoon", description: "\"teaspoon\"" },
        peg$c151 = "tsp.",
        peg$c152 = { type: "literal", value: "tsp.", description: "\"tsp.\"" },
        peg$c153 = "tsp",
        peg$c154 = { type: "literal", value: "tsp", description: "\"tsp\"" },
        peg$c155 = "t.",
        peg$c156 = { type: "literal", value: "t.", description: "\"t.\"" },
        peg$c157 = "t",
        peg$c158 = { type: "literal", value: "t", description: "\"t\"" },
        peg$c159 = "grams",
        peg$c160 = { type: "literal", value: "grams", description: "\"grams\"" },
        peg$c161 = "gram",
        peg$c162 = { type: "literal", value: "gram", description: "\"gram\"" },
        peg$c163 = "gr.",
        peg$c164 = { type: "literal", value: "gr.", description: "\"gr.\"" },
        peg$c165 = "gr",
        peg$c166 = { type: "literal", value: "gr", description: "\"gr\"" },
        peg$c167 = "g.",
        peg$c168 = { type: "literal", value: "g.", description: "\"g.\"" },
        peg$c169 = "g",
        peg$c170 = { type: "literal", value: "g", description: "\"g\"" },
        peg$c171 = "kilograms",
        peg$c172 = { type: "literal", value: "kilograms", description: "\"kilograms\"" },
        peg$c173 = "kilogram",
        peg$c174 = { type: "literal", value: "kilogram", description: "\"kilogram\"" },
        peg$c175 = "kg.",
        peg$c176 = { type: "literal", value: "kg.", description: "\"kg.\"" },
        peg$c177 = "kg",
        peg$c178 = { type: "literal", value: "kg", description: "\"kg\"" },
        peg$c179 = "liters",
        peg$c180 = { type: "literal", value: "liters", description: "\"liters\"" },
        peg$c181 = "liter",
        peg$c182 = { type: "literal", value: "liter", description: "\"liter\"" },
        peg$c183 = "l.",
        peg$c184 = { type: "literal", value: "l.", description: "\"l.\"" },
        peg$c185 = "l",
        peg$c186 = { type: "literal", value: "l", description: "\"l\"" },
        peg$c187 = "milligrams",
        peg$c188 = { type: "literal", value: "milligrams", description: "\"milligrams\"" },
        peg$c189 = "milligram",
        peg$c190 = { type: "literal", value: "milligram", description: "\"milligram\"" },
        peg$c191 = "mg.",
        peg$c192 = { type: "literal", value: "mg.", description: "\"mg.\"" },
        peg$c193 = "mg",
        peg$c194 = { type: "literal", value: "mg", description: "\"mg\"" },
        peg$c195 = "milliliters",
        peg$c196 = { type: "literal", value: "milliliters", description: "\"milliliters\"" },
        peg$c197 = "milliliter",
        peg$c198 = { type: "literal", value: "milliliter", description: "\"milliliter\"" },
        peg$c199 = "ml.",
        peg$c200 = { type: "literal", value: "ml.", description: "\"ml.\"" },
        peg$c201 = "ml",
        peg$c202 = { type: "literal", value: "ml", description: "\"ml\"" },
        peg$c203 = "dashes",
        peg$c204 = { type: "literal", value: "dashes", description: "\"dashes\"" },
        peg$c205 = "dash",
        peg$c206 = { type: "literal", value: "dash", description: "\"dash\"" },
        peg$c207 = "handfuls",
        peg$c208 = { type: "literal", value: "handfuls", description: "\"handfuls\"" },
        peg$c209 = "handful",
        peg$c210 = { type: "literal", value: "handful", description: "\"handful\"" },
        peg$c211 = "pinches",
        peg$c212 = { type: "literal", value: "pinches", description: "\"pinches\"" },
        peg$c213 = "pinch",
        peg$c214 = { type: "literal", value: "pinch", description: "\"pinch\"" },
        peg$c215 = "touches",
        peg$c216 = { type: "literal", value: "touches", description: "\"touches\"" },
        peg$c217 = "touch",
        peg$c218 = { type: "literal", value: "touch", description: "\"touch\"" },
        peg$c219 = "slices",
        peg$c220 = { type: "literal", value: "slices", description: "\"slices\"" },
        peg$c221 = "slice",
        peg$c222 = { type: "literal", value: "slice", description: "\"slice\"" },
        peg$c223 = "packets",
        peg$c224 = { type: "literal", value: "packets", description: "\"packets\"" },
        peg$c225 = "packet",
        peg$c226 = { type: "literal", value: "packet", description: "\"packet\"" },
        peg$c227 = "envelopes",
        peg$c228 = { type: "literal", value: "envelopes", description: "\"envelopes\"" },
        peg$c229 = "envelope",
        peg$c230 = { type: "literal", value: "envelope", description: "\"envelope\"" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0;

      s0 = peg$parseingredient_full();

      return s0;
    }

    function peg$parseingredient_full() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

      s0 = peg$currPos;
      s1 = peg$parseamount();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsews();
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parsews();
          }
        } else {
          s2 = peg$FAILED;
        }
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsecontainer();
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseunit();
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            if (s4 !== peg$FAILED) {
              s5 = [];
              s6 = peg$parsews();
              if (s6 !== peg$FAILED) {
                while (s6 !== peg$FAILED) {
                  s5.push(s6);
                  s6 = peg$parsews();
                }
              } else {
                s5 = peg$FAILED;
              }
              if (s5 === peg$FAILED) {
                s5 = null;
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parsepreposition();
                if (s6 === peg$FAILED) {
                  s6 = null;
                }
                if (s6 !== peg$FAILED) {
                  s7 = [];
                  s8 = peg$parsews();
                  if (s8 !== peg$FAILED) {
                    while (s8 !== peg$FAILED) {
                      s7.push(s8);
                      s8 = peg$parsews();
                    }
                  } else {
                    s7 = peg$FAILED;
                  }
                  if (s7 === peg$FAILED) {
                    s7 = null;
                  }
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parsephrase();
                    if (s8 === peg$FAILED) {
                      s8 = null;
                    }
                    if (s8 !== peg$FAILED) {
                      if (peg$c0.test(input.charAt(peg$currPos))) {
                        s9 = input.charAt(peg$currPos);
                        peg$currPos++;
                      } else {
                        s9 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c1); }
                      }
                      if (s9 === peg$FAILED) {
                        s9 = null;
                      }
                      if (s9 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c2(s1, s3, s4, s6, s8);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseamount() {
      var s0;

      s0 = peg$parsefraction();
      if (s0 === peg$FAILED) {
        s0 = peg$parsemixed_number();
        if (s0 === peg$FAILED) {
          s0 = peg$parseword_number();
          if (s0 === peg$FAILED) {
            s0 = peg$parsefloat();
            if (s0 === peg$FAILED) {
              s0 = peg$parseinteger();
              if (s0 === peg$FAILED) {
                s0 = peg$parsefew();
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parsecontainer() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parsecontainer_wrapper_start();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsews();
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parsews();
          }
        } else {
          s2 = peg$FAILED;
        }
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseamount();
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parsews();
            if (s5 !== peg$FAILED) {
              while (s5 !== peg$FAILED) {
                s4.push(s5);
                s5 = peg$parsews();
              }
            } else {
              s4 = peg$FAILED;
            }
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseunit();
              if (s5 !== peg$FAILED) {
                s6 = [];
                s7 = peg$parsews();
                if (s7 !== peg$FAILED) {
                  while (s7 !== peg$FAILED) {
                    s6.push(s7);
                    s7 = peg$parsews();
                  }
                } else {
                  s6 = peg$FAILED;
                }
                if (s6 === peg$FAILED) {
                  s6 = null;
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$parsecontainer_wrapper_end();
                  if (s7 === peg$FAILED) {
                    s7 = null;
                  }
                  if (s7 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c3(s3, s5);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsecontainer_wrapper_start() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 40) {
        s0 = peg$c4;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c5); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 123) {
          s0 = peg$c6;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c7); }
        }
        if (s0 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 91) {
            s0 = peg$c8;
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c9); }
          }
          if (s0 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 60) {
              s0 = peg$c10;
              peg$currPos++;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c11); }
            }
          }
        }
      }

      return s0;
    }

    function peg$parsecontainer_wrapper_end() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 41) {
        s0 = peg$c12;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c13); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 125) {
          s0 = peg$c14;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c15); }
        }
        if (s0 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 93) {
            s0 = peg$c16;
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c17); }
          }
          if (s0 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 62) {
              s0 = peg$c18;
              peg$currPos++;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c19); }
            }
          }
        }
      }

      return s0;
    }

    function peg$parsews() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 32) {
        s0 = peg$c20;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c21); }
      }
      if (s0 === peg$FAILED) {
        if (peg$c22.test(input.charAt(peg$currPos))) {
          s0 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c23); }
        }
      }

      return s0;
    }

    function peg$parsepreposition() {
      var s0;

      if (input.substr(peg$currPos, 2).toLowerCase() === peg$c24) {
        s0 = input.substr(peg$currPos, 2);
        peg$currPos += 2;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c25); }
      }

      return s0;
    }

    function peg$parsearticle() {
      var s0;

      if (input.substr(peg$currPos, 2).toLowerCase() === peg$c26) {
        s0 = input.substr(peg$currPos, 2);
        peg$currPos += 2;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c27); }
      }
      if (s0 === peg$FAILED) {
        if (input.substr(peg$currPos, 1).toLowerCase() === peg$c28) {
          s0 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c29); }
        }
      }

      return s0;
    }

    function peg$parsespace() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 32) {
        s0 = peg$c20;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c21); }
      }

      return s0;
    }

    function peg$parsephrase() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      if (input.length > peg$currPos) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c30); }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          if (input.length > peg$currPos) {
            s2 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c30); }
          }
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        s0 = input.substring(s0, peg$currPos);
      } else {
        s0 = s1;
      }

      return s0;
    }
